# py7zr

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  .reviewdog.yml  .travis.yml  AUTHORS  Changelog.rst  Changelog_old.rst  MANIFEST.in  README.rst  appveyor.yml  azure-pipelines.yml  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-note.yml  run-benchmark.yml  run-linter.yml  run-tox-tests.yml  stale.yml
docs/: 7zFormat.html  7zFormat.ods  7zFormat.rst  AUTHORS.rst  Changelog.rst  Intoroduction_of_py7zr.odp  Makefile  SECURITY.rst  advanced.rst  api.rst  archive_format.rst  authors.rst  changelog.rst  class_diagram.dia  classes.dot  compressor_classes.dot  conf.py  contribution.rst  design.rst  design_and_classes.rst  filters.rst  glossary.rst  index.rst  internal_classes.rst  make.bat  previous_changes.rst  py7zr.rst  requirements.txt  sevenzip-specifications.rst  user_guide.rst
docs/diagrams/: abstractio.dot  callbacks.dot  classes.dot  compressor_classes.dot  header_classes.dot  packages.dot
docs/presentations/: Introduction_of_py7zr.odp
docs/specification/: appendix.rst  fileformat.rst
py7zr/: __init__.py  __init__.pyi  __main__.py  __main__.pyi  altmethods.py  archive7z.py  archiveinfo.py  archiveinfo.pyi  archiveio.py  bcjfilter.py  bcjfilter.pyi  callback.py  callbacks.py  callbacks.pyi  cli.py  cli.pyi  compression.py  compressor.py  compressor.pyi  decompressors.py  exceptions.py  exceptions.pyi  extra.py  helper.py  helpers.py  helpers.pyi  io.py  member.py  properties.py  properties.pyi  py7zr.py  py7zr.pyi  py7zrlib.py  pyzstdfilter.py  sevenzipfile.py  timestamp.py  win32compat.py  win32compat.pyi  writerworker.py  zstdfilter.py
py7zr/tests/: __init__.py  pytest.ini  test_7zfiles.py  test_advanced.py  test_basic.py  test_compress.py  test_p7zip.py  test_pylzma_cases.py  test_unit.py  test_unittest_py7zr.py  utils.py
py7zr/tests/data/: non_solid.7z  symlink.7z  zerosize.7z
py7zr/tests/data/test_1/scripts/: py7zr
py7zr/tests/data/test_2/qt.qt5.597.gcc_64/: installscript.qs
tests/: __init__.py  bench_compare.sh  conftest.py  pytest.ini  test_advanced.py  test_archive.py  test_attack.py  test_badfiles.py  test_basic.py  test_basic_unit.py  test_benchmark.py  test_cli.py  test_compress.py  test_concurrent.py  test_encryption.py  test_extra_codecs.py  test_extract.py  test_files.py  test_files_lzmamethods.py  test_files_multi.py  test_getinfo.py  test_info.py  test_member_type.py  test_misc.py  test_pylzma_cases.py  test_stream.py  test_stream_nwstorage.py  test_unit.py  test_win32compat.py  test_zipslip.py
tests/archive/: test_3.7z
tests/data/: archive.7z.001  archive.7z.002  brotli.7z  bzip2_2.7z  copy.7z  copy_2.7z  copy_bcj_1.7z  crc_corrupted.7z  data_corrupted.7z  deflate64.7z  encrypted_2.7z  encrypted_3.7z  encrypted_4.7z  encrypted_5.7z  encrypted_6.7z  extra_payload_data.7z  filename_encryption.7z  hidden_linux_file.7z  hidden_linux_folder.7z  issue_218.7z  issue_218_2.7z  longpath.7z  lz4.7z  lzma2_bcj_arm.7z  lzma2_bcj_armt.7z  lzma2_bcj_ia64.7z  lzma2_bcj_sparc.7z  lzma2_nested.7z  lzma2_ng.7z  lzma2bcj2.7z  lzma2bcj2_2.7z  lzma2delta_1.7z  lzma_1.7z  lzma_bcj.7z  lzma_bcj2_1.7z  lzma_bcj_2.7z  lzma_bcj_arm.7z  lzma_bcj_armt.7z  lzma_bcj_ppc.7z  lzma_bcj_sparc.7z  (+20 more)
tests/data/src/: bra.txt
tests/fuzzers/: README.rst  hypothesis_fuzzer.py
tests/origin/test_1/: setup.py
tests/pymod/: test7zr.py
utils/: bench_comment_issue.py  bench_commit_issue.py  bench_result.py  github_comment_bench.py  prof_result.py  requirements.txt
