[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = py7zr
description = Pure python 7-zip decompression(restricted) library
long_description = file: README.rst, Changelog.rst
long_description_content_type = text/x-rst
keywords = compression, 7zip, lzma
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/py7zr
classifiers =
      Development Status :: 4 - Beta
      Environment :: Console
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.5
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3 :: Only
      Topic :: System :: Archiving :: Compression
      Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
      texttable
      pathlib2>=2.2.0;python_version<"3.6"
      pycryptodome
      pywin32;sys_platform=="win32"
setup_requires =
      setuptools-scm>=3.5.0
      setuptools>=42.0
      wheel
      pep517
packages = py7zr

[options.entry_points]
console_scripts =
    py7zr = py7zr.__main__:main

[options.extras_require]
dev =
      pytest
      pytest-benchmark
      pytest-cov
      pytest-timeout
      pytest-remotedata
      pyannotate
      flake8
      twine
      coverage[toml]==5.0.1
      codecov
      coveralls
