[flake8]
max-line-length = 125

[bdist_wheel]
universal = 0

[metadata]
name = py7zr
description = Pure python 7-zip library
long_description = file: README.rst, Changelog.rst
long_description_content_type = text/x-rst
keywords = compression, 7zip, lzma, zstandard
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = https://github.com/miurahr/py7zr
classifiers =
      Development Status :: 4 - Beta
      Environment :: Console
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3 :: Only
      Topic :: System :: Archiving :: Compression
      Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
install_requires =
      texttable
      pycryptodome
      importlib_metadata;python_version<"3.8"
setup_requires =
      setuptools-scm>=3.5.0
      setuptools>=42.0
      wheel
      pep517
packages = py7zr

[options.entry_points]
console_scripts =
    py7zr = py7zr.__main__:main

[options.extras_require]
zstd = zstandard
ppmd = ppmd-cffi>=0.3.1,<0.4.0
multivolume = multivolumefile>=0.1.1,<0.2.0
test_compat = libarchive-c
test =
      pytest
      pytest-benchmark
      pytest-cov
      pytest-timeout
      pytest-remotedata
      pyannotate
      coverage[toml]>=5.2
      coveralls>=2.1.1
docs =
      sphinx>=1.8
      sphinx-py3doc-enhanced-theme
      sphinx-a4doc
      docutils
check =
      mypy>=0.701
      mypy_extensions>=0.4.1
      check-manifest
      flake8
      readme-renderer
      pygments
      isort>=5.0.3
      twine
