[flake8]
max-line-length = 125
extend-ignore = E203, W503
ignore = F841

[bdist_wheel]
universal = 0

[metadata]
name = py7zr
description = Pure python 7-zip library
long_description = file: README.rst, Changelog.rst
long_description_content_type = text/x-rst
keywords = compression, 7zip, lzma, zstandard, ppmd, lzma2, bcj, archive
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = https://github.com/miurahr/py7zr
classifiers =
      Development Status :: 4 - Beta
      Environment :: Console
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10
      Programming Language :: Python :: 3 :: Only
      Topic :: System :: Archiving :: Compression
      Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.7
install_requires =
      texttable
      pycryptodomex>=3.6.6
      importlib_metadata;python_version<"3.8"
      brotli>=1.0.9;platform_python_implementation=="CPython"
      brotlicffi>=1.0.9.2;platform_python_implementation=="PyPy"
      psutil
      pyzstd>=0.14.4
      pyppmd>=0.18.1,<0.19.0
      pybcj>=0.6.0
      multivolumefile>=0.2.3
      inflate64>=0.3.0;python_version>"3.6"
setup_requires =
      setuptools-scm>=7.0.5
      wheel
      setuptools>=63.0
packages = py7zr

[options.entry_points]
console_scripts =
    py7zr = py7zr.__main__:main

[options.package_data]
* = py7zr/py.typed

[options.extras_require]
test_compat = libarchive-c
test =
      pytest
      pytest-benchmark
      pytest-cov
      pytest-remotedata
      pytest-timeout
      pyannotate
      py-cpuinfo
      coverage[toml]>=5.2
      coveralls>=2.1.1
docs =
      sphinx>=5.0
      sphinx-py3doc-enhanced-theme
      sphinx-a4doc
      docutils
check =
      mypy>=0.940
      mypy_extensions>=0.4.1
      check-manifest
      flake8
      flake8-black
      flake8-deprecated
      isort>=5.0.3
      pygments
      readme-renderer
      twine
debug =
      pytest
      pytest-leaks
      pytest-profiling
